# python-action

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  SECURITY.md  pyproject.toml
.github/: dependabot.yml  dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: backport.yml  clean.yaml  main.yaml  rebuild.yaml
ci/: config.yaml  dpkg-versions.yaml  requirements.txt
