[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "python-action"
description = "Docker base image for GitHub Action that needs Python"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
